--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pydantic_core==2.41.4
 Pygments==2.19.2
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-json-logger==2.0.7
 python-multipart==0.0.20
 PyYAML==6.0.3
 rich==14.2.0
